# understory-ci-windows

./: CPackIFW.cmake  CPackIFW_redone.cmake  Dockerfile  LICENSE  README.md  build.sh  makensis
makensis/: CMakeLists.txt  main.cpp
wine-wrappers/: CMakeLists.txt  main.cpp  wrappersList.txt
